5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2566.log
== TEST (2019-06-10 23:09:38) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)
for i in range(0,size(f)):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:10:40) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	print(i)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:12:27) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

while(f[i]>=2 and f[i]<=7):
	for i in range(0,size(f)):
		print(i)

	
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:12:45) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

while(f[i]>=2 and f[i]<=7):
	for i in range(0,size(f)):
		print(i)

	
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:13:40) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	print(size(f))

	
	print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:13:57) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	print(size(f))

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:17:43) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2
		cont[0]=cont[0]+1
print(cont)

-- ERROR:
File "XXXX", line 7
    if f[i]==2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:17:51) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		cont[0]=cont[0]+1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:18:08) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:18:19) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:20:56) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:21:10) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:22:01) 
-- CODE:
from numpy import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(round(v1,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:22:30) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(round(v1,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:23:55) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)
x = v1[i]/100
for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:24:13) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)
x = v1[i]/100
for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:25:33) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(v1/100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:26:08) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(v1*100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:26:34) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(round(v1*100,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:26:59) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(v1/100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:27:12) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print(v1/100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:27:44) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print((v1/100)*100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:27:49) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print((v1/100)*100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:28:05) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print((v1/100)*1000)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:28:14) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print((v1/100)*1000)

-- EXECUTION TIME:
1.18524
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30.  0.  0. 30. 40. 60.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10. 20. 40. 50. 50. 80.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20. 10. 30. 10. 20. 40.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:28:17) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print((v1/100)*1000)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:28:37) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
	
print((v1/100)*1000)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:30:17) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1

x = sum(v1)/100
print((v1/100)*1000)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:30:33) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1

x = sum(v1)/100
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:31:09) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		(v1[0]=v1[0]+1)/100
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1


print(v1)

-- ERROR:
File "XXXX", line 9
    (v1[0]=v1[0]+1)/100
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:31:15) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		(v1[0]=v1[0]+1)/100
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1


print(v1)

-- ERROR:
File "XXXX", line 9
    (v1[0]=v1[0]+1)/100
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:31:24) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1


print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:34:25) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1

x=v1[i]/100
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:34:30) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))
i = 0
v1 = zeros(6,dtype=int)

for i in range(0,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1

x=v1[i]/100
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:59:35) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1

x=v1[i]/100
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:07:45) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	if f[i]==3:
		v1[1]=v1[1]+1
	if f[i]==4:
		v1[2]=v1[2]+1
	if f[i]==5:
		v1[3]=v1[3]+1
	if f[i]==6:
		v1[4]=v1[4]+1
	if f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100


print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:13) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100
for b in range(size(v1)):
	v1[0]=round(x[0],1)
	v1[1]=round(x[1],1)
	v1[2]=round(x[2],1)
	v1[3]=round(x[3],1)
	v1[4]=round(x[4],1)
	v1[5]=round(x[5],1)
	v1[]=round(x[6],1)
	



print(z)

-- ERROR:
File "XXXX", line 28
    v1[]=round(x[6],1)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:21) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100
for b in range(size(v1)):
	v1[0]=round(x[0],1)
	v1[1]=round(x[1],1)
	v1[2]=round(x[2],1)
	v1[3]=round(x[3],1)
	v1[4]=round(x[4],1)
	v1[5]=round(x[5],1)

	



print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:12:10) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100
for b in range(size(v1)):
	v1[0]=round(v1[0],1)
	v1[1]=round(v1[1],1)
	v1[2]=round(v1[2],1)
	v1[3]=round(v1[3],1)
	v1[4]=round(v1[4],1)
	v1[5]=round(v1[5],1)

	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:13:18) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100
for b in range(size(z)):
	z[0]=round(z[0],1)
	v1[1]=round(v1[1],1)
	v1[2]=round(v1[2],1)
	v1[3]=round(v1[3],1)
	v1[4]=round(v1[4],1)
	v1[5]=round(v1[5],1)

	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:13:57) 
-- CODE:
from numpy import*
from math import*
f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(6,size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100
for b in range(size(z)):
	z[0]=round(z[0],1)
	z[1]=round(z[1],1)
	z[2]=round(z[2],1)
	z[3]=round(z[3],1)
	z[4]=round(z[4],1)
	z[5]=round(z[5],1)

	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:14:48) 
-- CODE:
from numpy import*

f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(v1))*100
for b in range(size(z)):
	z[0]=round(z[0],1)
	z[1]=round(z[1],1)
	z[2]=round(z[2],1)
	z[3]=round(z[3],1)
	z[4]=round(z[4],1)
	z[5]=round(z[5],1)

	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:22) 
-- CODE:
from numpy import*

f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(f))*100
for b in range(size(z)):
	z[0]=round(z[0],1)
	z[1]=round(z[1],1)
	z[2]=round(z[2],1)
	z[3]=round(z[3],1)
	z[4]=round(z[4],1)
	z[5]=round(z[5],1)

	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:15:31) 
-- CODE:
from numpy import*

f = array(eval(input("Vetor de faltas: ")))

v1 = zeros(6,dtype=int)

for i in range(size(f)):
	if f[i]==2:
		v1[0]=v1[0]+1
	elif f[i]==3:
		v1[1]=v1[1]+1
	elif f[i]==4:
		v1[2]=v1[2]+1
	elif f[i]==5:
		v1[3]=v1[3]+1
	elif f[i]==6:
		v1[4]=v1[4]+1
	elif f[i]==7:
		v1[5]=v1[5]+1
z = (v1/size(f))*100
for b in range(size(z)):
	z[0]=round(z[0],1)
	z[1]=round(z[1],1)
	z[2]=round(z[2],1)
	z[3]=round(z[3],1)
	z[4]=round(z[4],1)
	z[5]=round(z[5],1)

	
print(z)

-- EXECUTION TIME:
1.15366
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:20:37) 
-- CODE:
from numpy import *
f = array(eval(input("Faltas: ")))
v = zeros(6,dtype=int)

for i in range(size(f)):
	if f[i]==2
		v[0] = v[0] + 1 
	if f[i]==3
		v[1] = v[1] + 1 
	if f[i]==4
		v[2] = v[2] + 1 
	if f[i]==5
		v[3] = v[3] + 1
	if f[i]==6
		v[4] = v[4] + 1 
	if f[i]==7
		v[5] = v[5] + 1 
y = (v/size(f))*100
for j in range(size(v)):
	y[0]= round(y[0],1)
	y[1]= round(y[1],1)
	y[2]= round(y[2],1)
	y[3]= round(y[3],1)
	y[4]= round(y[4],1)
	y[5]= round(y[5],1)
print(y)
	
-- ERROR:
File "XXXX", line 6
    if f[i]==2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:21:01) 
-- CODE:
from numpy import *
f = array(eval(input("Faltas: ")))
v = zeros(6,dtype=int)

for i in range(size(f)):
	if f[i]==2:
		v[0] = v[0] + 1 
	if f[i]==3:
		v[1] = v[1] + 1 
	if f[i]==4:
		v[2] = v[2] + 1 
	if f[i]==5:
		v[3] = v[3] + 1
	if f[i]==6:
		v[4] = v[4] + 1 
	if f[i]==7:
		v[5] = v[5] + 1 
y = (v/size(f))*100
for j in range(size(v)):
	y[0]= round(y[0],1)
	y[1]= round(y[1],1)
	y[2]= round(y[2],1)
	y[3]= round(y[3],1)
	y[4]= round(y[4],1)
	y[5]= round(y[5],1)
print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
